upload complete image and data

--- a/MiniProjectWebServer/MiniProjectWebServer/Resources/Supporting Files/Info.plist
+++ b/MiniProjectWebServer/MiniProjectWebServer/Resources/Supporting Files/Info.plist
@@ -41,5 +41,14 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSCameraUsageDescription</key>
+	<string>Take Photo From Camera</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Take Photo From Your Gallery</string>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
 </dict>
 </plist>
